# artifact_raylib

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  code-style-guidelines.md  conandata.yml  main.cpp  vcpkg.json
.github/workflows/: build.yml  pr-validation.yml
cmake/: assets.cmake  clang.cmake  gcc.cmake  msvc.cmake  vendors.cmake
include/: collider.h  game.h  resource.h  resource_manager.h  resource_type.h  sprite_sheet.h  timer.h
include/entities/: enemy_entity.h  entity.h  player_entity.h  roamer_entity.h
include/errors/: resource_error.h
include/settings/: controls_settings.h  display_settings.h  settings_base.h
include/stages/: level_1_a_stage.h  menu_stage.h  playable_stage.h  player_stage.h  stage.h  stage_manager.h  stages.h  title_screen.h
include/ui/components/: button_component.h  component_base.h
include/ui/components/containers/: container_base.h  horizontal_list_container.h  list_container.h  vertical_list_container.h
include/ui/menus/: menu_base.h  pause_screen.h  settings_screen.h
resources/: version.rc
scripts/linux/: all.sh  bundled.sh  debug.sh  shared.sh
scripts/unix/: all.sh  bundled.sh  conan-install.sh  debug.sh  init.sh  minimal.sh  shared.sh  standalone.sh
scripts/windows/: all.bat  conan-install.bat  debug.bat  init.bat  minimal.bat  standalone.bat
src/: collider.cpp  game.cpp  resource_manager.cpp  sprite_sheet.cpp  timer.cpp
src/entities/: entity.cpp  player_entity.cpp  roamer_entity.cpp
src/settings/: controls_settings.cpp  display_settings.cpp
src/stages/: level_1_a_stage.cpp  playable_stage.cpp  player_stage.cpp  stage_manager.cpp  title_screen.cpp
src/ui/components/: button_component.cpp  component_base.cpp
src/ui/components/containers/: container_base.cpp  horizontal_list_container.cpp  list_container.cpp  vertical_list_container.cpp
src/ui/menus/: menu_base.cpp  pause_screen.cpp  settings_screen.cpp
